--- a/composer.json
+++ b/composer.json
@@ -1,36 +1,39 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
+    "name": "tfsthiagobr98/filament-mapbox",
+    "description": "MapBox for Filament",
     "keywords": [
-        ":vendor_name",
+        "TFSThiagoBR98",
         "laravel",
-        ":package_slug"
+        "filament-mapbox"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/tfsthiagobr98/filament-mapbox",
     "support": {
-        "issues": "https://github.com/:vendor_slug/:package_slug/issues",
-        "source": "https://github.com/:vendor_slug/:package_slug"
+        "issues": "https://github.com/tfsthiagobr98/filament-mapbox/issues",
+        "source": "https://github.com/tfsthiagobr98/filament-mapbox"
     },
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "Thiago França da Silva",
+            "email": "contact@tfs.dev.br",
             "role": "Developer"
         }
     ],
     "require": {
         "php": "^8.1",
         "filament/filament": "^3.0",
-        "filament/forms": "^3.0",
-        "filament/tables": "^3.0",
+        "geocoder-php/mapbox-provider": "^1.4",
+        "illuminate/contracts": "^10.0",
+        "jmikola/geojson": "^1.2",
+        "matanyadaev/laravel-eloquent-spatial": "^4.0",
+        "psr/http-client": "^1.0",
         "spatie/laravel-package-tools": "^1.15.0",
-        "illuminate/contracts": "^10.0"
+        "symfony/http-client": "^7.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
         "nunomaduro/collision": "^7.9",
-        "nunomaduro/larastan": "^2.0.1",
+        "larastan/larastan": "^2.8",
         "orchestra/testbench": "^8.0",
         "pestphp/pest": "^2.0",
         "pestphp/pest-plugin-arch": "^2.0",
@@ -42,13 +45,13 @@
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src/",
-            "VendorName\\Skeleton\\Database\\Factories\\": "database/factories/"
+            "TFSThiagoBR98\\FilamentMapbox\\": "src/",
+            "TFSThiagoBR98\\FilamentMapbox\\Database\\Factories\\": "database/factories/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests/"
+            "TFSThiagoBR98\\FilamentMapbox\\Tests\\": "tests/"
         }
     },
     "scripts": {
@@ -62,16 +65,17 @@
         "sort-packages": true,
         "allow-plugins": {
             "pestphp/pest-plugin": true,
-            "phpstan/extension-installer": true
+            "phpstan/extension-installer": true,
+            "php-http/discovery": true
         }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "VendorName\\Skeleton\\SkeletonServiceProvider"
+                "TFSThiagoBR98\\FilamentMapbox\\FilamentMapboxServiceProvider"
             ],
             "aliases": {
-                "Skeleton": "VendorName\\Skeleton\\Facades\\Skeleton"
+                "FilamentMapbox": "TFSThiagoBR98\\FilamentMapbox\\Facades\\FilamentMapbox"
             }
         }
     },
