--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "postcss-import": "^15.1.0",
         "prettier": "^2.7.1",
         "prettier-plugin-tailwindcss": "^0.1.13",
-        "tailwindcss": "^3.3.3"
+        "tailwindcss": "^3.3.3",
+        "underscore": "^1.13.6"
     },
     "dependencies": {
         "mapbox-gl": "^3.1.0"
